adding answered questions up to 5th

--- a/Home_Sales.ipynb
+++ b/Home_Sales.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -90,19 +90,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "id": "RoljcJ7WPpnm"
    },
    "outputs": [],
    "source": [
     "# 2. Create a temporary view of the DataFrame.\n",
-    "home_df.createOrReplaceTempView('home')\n"
+    "home_df.createOrReplaceTempView('home_sales')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -110,15 +110,35 @@
     "id": "L6fkwOeOmqvq",
     "outputId": "bdded620-79c4-488d-c7a5-91c6799c419e"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+-------------+\n",
+      "|bedrooms|average_price|\n",
+      "+--------+-------------+\n",
+      "|       4|    299661.01|\n",
+      "+--------+-------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. What is the average price for a four bedroom house sold in each year rounded to two decimal places?\n",
-    "\n"
+    "spark.sql(\"\"\"\n",
+    "        select \n",
+    "        bedrooms,\n",
+    "        ROUND(AVG(price), 2) as average_price\n",
+    "        from home_sales\n",
+    "        where bedrooms==4\n",
+    "        group by bedrooms\n",
+    "        \"\"\").show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -126,15 +146,40 @@
     "id": "l8p_tUS8h8it",
     "outputId": "65806e5f-6262-41c0-ff65-5107464e5c4d"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+--------+---------+-------------+\n",
+      "|year|bedrooms|bathrooms|average_price|\n",
+      "+----+--------+---------+-------------+\n",
+      "|2021|       3|        3|    294211.46|\n",
+      "|2020|       3|        3|    294204.16|\n",
+      "|2022|       3|        3|    292725.69|\n",
+      "|2019|       3|        3|    287287.82|\n",
+      "+----+--------+---------+-------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. What is the average price of a home for each year the home was built that have 3 bedrooms and 3 bathrooms rounded to two decimal places?\n",
-    "\n"
+    "spark.sql(\"\"\"\n",
+    "        select \n",
+    "        year(date) as year,\n",
+    "        bedrooms, \n",
+    "        bathrooms,\n",
+    "        ROUND(AVG(price), 2) as average_price\n",
+    "        from home_sales\n",
+    "        where bedrooms==3 and bathrooms==3\n",
+    "        group by year, bedrooms, bathrooms\n",
+    "        \"\"\").show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -142,11 +187,51 @@
     "id": "Y-Eytz64liDU",
     "outputId": "17119810-56ad-40c3-de5e-c3db57e43bcc"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+-------------+--------+---------+-----------+------+\n",
+      "|year|average_price|bedrooms|bathrooms|sqft_living|floors|\n",
+      "+----+-------------+--------+---------+-----------+------+\n",
+      "|2019|     241718.0|       3|        3|       2416|     2|\n",
+      "|2019|     314563.0|       3|        3|       2123|     2|\n",
+      "|2019|     188558.0|       3|        3|       2277|     2|\n",
+      "|2019|     339286.0|       3|        3|       2144|     2|\n",
+      "|2019|     168463.0|       3|        3|       2271|     2|\n",
+      "|2019|     172386.0|       3|        3|       2219|     2|\n",
+      "|2019|     338296.0|       3|        3|       2386|     2|\n",
+      "|2019|     997872.0|       3|        3|       3968|     2|\n",
+      "|2019|     252740.0|       3|        3|       2322|     2|\n",
+      "|2019|     213715.5|       3|        3|       2052|     2|\n",
+      "|2019|     264351.0|       3|        3|       2336|     2|\n",
+      "|2019|     290935.5|       3|        3|       2145|     2|\n",
+      "|2019|     434527.0|       3|        3|       2180|     2|\n",
+      "|2019|     366398.0|       3|        3|       2051|     2|\n",
+      "|2019|     194425.0|       3|        3|       2015|     2|\n",
+      "|2019|     284635.0|       3|        3|       2250|     2|\n",
+      "|2019|     405100.0|       3|        3|       2099|     2|\n",
+      "|2019|     259047.0|       3|        3|       2060|     2|\n",
+      "|2019|     341713.0|       3|        3|       2083|     2|\n",
+      "|2019|     407891.5|       3|        3|       2413|     2|\n",
+      "+----+-------------+--------+---------+-----------+------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "#  5. What is the average price of a home for each year built that have 3 bedrooms, 3 bathrooms, with two floors,\n",
     "# and are greater than or equal to 2,000 square feet rounded to two decimal places?\n",
-    "\n"
+    "\n",
+    "spark.sql(\"\"\"\n",
+    "        select year(date) as year, round(avg(price), 2) as average_price, bedrooms, bathrooms, sqft_living, floors\n",
+    "        from home_sales\n",
+    "        where bedrooms==3 and bathrooms==3 and sqft_living>=2000 and floors==2\n",
+    "        group by year, bedrooms, bathrooms, sqft_living, floors\n",
+    "        order by year\n",
+    "        \"\"\").show()"
    ]
   },
   {
