--- a/Home_Sales.ipynb
+++ b/Home_Sales.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -244,13 +244,54 @@
     "id": "GUrfgOX1pCRd",
     "outputId": "17c25774-855e-4290-a4bd-a04902bdc13a"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+-------------+\n",
+      "|view|average_price|\n",
+      "+----+-------------+\n",
+      "|  33|    393973.32|\n",
+      "|  37|    394964.36|\n",
+      "|   6|    395655.38|\n",
+      "|  42|     396964.5|\n",
+      "|   2|    397389.25|\n",
+      "|  29|    397771.65|\n",
+      "|  30|     397862.0|\n",
+      "|  38|    398418.37|\n",
+      "|  47|     398447.5|\n",
+      "|  17|    398474.49|\n",
+      "|  14|    398570.03|\n",
+      "|   8|    398592.71|\n",
+      "|   3|     398867.6|\n",
+      "|  13|    398917.98|\n",
+      "|  19|    398953.17|\n",
+      "|  39|    399234.22|\n",
+      "|  18|    399332.91|\n",
+      "|  32|    399367.72|\n",
+      "|  20|    399522.81|\n",
+      "|  27|    399537.66|\n",
+      "+----+-------------+\n",
+      "only showing top 20 rows\n",
+      "\n",
+      "--- 1.0781161785125732 seconds ---\n"
+     ]
+    }
+   ],
    "source": [
     "# 6. What is the \"view\" rating for the average price of a home, rounded to two decimal places, where the homes are greater than\n",
     "# or equal to $350,000? Although this is a small dataset, determine the run time for this query.\n",
     "\n",
     "start_time = time.time()\n",
     "\n",
+    "spark.sql(\"\"\"\n",
+    "        SELECT view, round(avg(price), 2) as average_price\n",
+    "        FROM home_sales\n",
+    "        WHERE price >=350000\n",
+    "        GROUP BY view\n",
+    "        ORDER BY average_price\n",
+    "        \"\"\").show()\n",
     "\n",
     "\n",
     "print(\"--- %s seconds ---\" % (time.time() - start_time))"
@@ -258,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -266,14 +307,26 @@
     "id": "KAhk3ZD2tFy8",
     "outputId": "0a8f132d-40a8-4bd4-b5f2-2847e98427f5"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 7. Cache the the temporary table home_sales.\n"
+    "# 7. Cache the the temporary table home_sales.\n",
+    "spark.sql(\"cache table home_sales\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -281,7 +334,18 @@
     "id": "4opVhbvxtL-i",
     "outputId": "38ec8487-795f-4550-b50c-fcc6f2b7c769"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 8. Check if the table is cached.\n",
     "spark.catalog.isCached('home_sales')"
@@ -289,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -297,13 +361,54 @@
     "id": "5GnL46lwTSEk",
     "outputId": "09a16c73-194d-4371-95d1-ee64fe83b91c"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+-------------+\n",
+      "|view|average_price|\n",
+      "+----+-------------+\n",
+      "|  33|    393973.32|\n",
+      "|  37|    394964.36|\n",
+      "|   6|    395655.38|\n",
+      "|  42|     396964.5|\n",
+      "|   2|    397389.25|\n",
+      "|  29|    397771.65|\n",
+      "|  30|     397862.0|\n",
+      "|  38|    398418.37|\n",
+      "|  47|     398447.5|\n",
+      "|  17|    398474.49|\n",
+      "|  14|    398570.03|\n",
+      "|   8|    398592.71|\n",
+      "|   3|     398867.6|\n",
+      "|  13|    398917.98|\n",
+      "|  19|    398953.17|\n",
+      "|  39|    399234.22|\n",
+      "|  18|    399332.91|\n",
+      "|  32|    399367.72|\n",
+      "|  20|    399522.81|\n",
+      "|  27|    399537.66|\n",
+      "+----+-------------+\n",
+      "only showing top 20 rows\n",
+      "\n",
+      "--- 1.2293694019317627 seconds ---\n"
+     ]
+    }
+   ],
    "source": [
     "# 9. Using the cached data, run the query that filters out the view ratings with average price \n",
     "#  greater than or equal to $350,000. Determine the runtime and compare it to uncached runtime.\n",
     "\n",
     "start_time = time.time()\n",
     "\n",
+    "spark.sql(\"\"\"\n",
+    "        SELECT view, round(avg(price), 2) as average_price\n",
+    "        FROM home_sales\n",
+    "        WHERE price >=350000\n",
+    "        GROUP BY view\n",
+    "        ORDER BY average_price\n",
+    "        \"\"\").show()\n",
     "\n",
     "\n",
     "print(\"--- %s seconds ---\" % (time.time() - start_time))\n"
