--- a/Home_Sales.ipynb
+++ b/Home_Sales.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -115,11 +115,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+--------+-------------+\n",
-      "|bedrooms|average_price|\n",
-      "+--------+-------------+\n",
-      "|       4|    299661.01|\n",
-      "+--------+-------------+\n",
+      "+----+--------+-------------+\n",
+      "|year|bedrooms|average_price|\n",
+      "+----+--------+-------------+\n",
+      "|2019|       4|     300263.7|\n",
+      "|2020|       4|    298353.78|\n",
+      "|2021|       4|    301819.44|\n",
+      "|2022|       4|    296363.88|\n",
+      "+----+--------+-------------+\n",
       "\n"
      ]
     }
@@ -128,17 +131,19 @@
     "# 3. What is the average price for a four bedroom house sold in each year rounded to two decimal places?\n",
     "spark.sql(\"\"\"\n",
     "        select \n",
+    "        year(date) as year,\n",
     "        bedrooms,\n",
     "        ROUND(AVG(price), 2) as average_price\n",
     "        from home_sales\n",
     "        where bedrooms==4\n",
-    "        group by bedrooms\n",
+    "        group by year, bedrooms\n",
+    "        order by year\n",
     "        \"\"\").show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -151,14 +156,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----+--------+---------+-------------+\n",
-      "|year|bedrooms|bathrooms|average_price|\n",
-      "+----+--------+---------+-------------+\n",
-      "|2021|       3|        3|    294211.46|\n",
-      "|2020|       3|        3|    294204.16|\n",
-      "|2022|       3|        3|    292725.69|\n",
-      "|2019|       3|        3|    287287.82|\n",
-      "+----+--------+---------+-------------+\n",
+      "+----------+--------+---------+-------------+\n",
+      "|date_built|bedrooms|bathrooms|average_price|\n",
+      "+----------+--------+---------+-------------+\n",
+      "|      2010|       3|        3|    292859.62|\n",
+      "|      2011|       3|        3|    291117.47|\n",
+      "|      2012|       3|        3|    293683.19|\n",
+      "|      2013|       3|        3|    295962.27|\n",
+      "|      2014|       3|        3|    290852.27|\n",
+      "|      2015|       3|        3|     288770.3|\n",
+      "|      2016|       3|        3|    290555.07|\n",
+      "|      2017|       3|        3|    292676.79|\n",
+      "+----------+--------+---------+-------------+\n",
       "\n"
      ]
     }
@@ -167,19 +176,20 @@
     "# 4. What is the average price of a home for each year the home was built that have 3 bedrooms and 3 bathrooms rounded to two decimal places?\n",
     "spark.sql(\"\"\"\n",
     "        select \n",
-    "        year(date) as year,\n",
+    "        date_built,\n",
     "        bedrooms, \n",
     "        bathrooms,\n",
     "        ROUND(AVG(price), 2) as average_price\n",
     "        from home_sales\n",
     "        where bedrooms==3 and bathrooms==3\n",
-    "        group by year, bedrooms, bathrooms\n",
+    "        group by date_built, bedrooms, bathrooms\n",
+    "        order by date_built\n",
     "        \"\"\").show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -192,31 +202,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----+-------------+--------+---------+-----------+------+\n",
-      "|year|average_price|bedrooms|bathrooms|sqft_living|floors|\n",
-      "+----+-------------+--------+---------+-----------+------+\n",
-      "|2019|     241718.0|       3|        3|       2416|     2|\n",
-      "|2019|     314563.0|       3|        3|       2123|     2|\n",
-      "|2019|     188558.0|       3|        3|       2277|     2|\n",
-      "|2019|     339286.0|       3|        3|       2144|     2|\n",
-      "|2019|     168463.0|       3|        3|       2271|     2|\n",
-      "|2019|     172386.0|       3|        3|       2219|     2|\n",
-      "|2019|     338296.0|       3|        3|       2386|     2|\n",
-      "|2019|     997872.0|       3|        3|       3968|     2|\n",
-      "|2019|     252740.0|       3|        3|       2322|     2|\n",
-      "|2019|     213715.5|       3|        3|       2052|     2|\n",
-      "|2019|     264351.0|       3|        3|       2336|     2|\n",
-      "|2019|     290935.5|       3|        3|       2145|     2|\n",
-      "|2019|     434527.0|       3|        3|       2180|     2|\n",
-      "|2019|     366398.0|       3|        3|       2051|     2|\n",
-      "|2019|     194425.0|       3|        3|       2015|     2|\n",
-      "|2019|     284635.0|       3|        3|       2250|     2|\n",
-      "|2019|     405100.0|       3|        3|       2099|     2|\n",
-      "|2019|     259047.0|       3|        3|       2060|     2|\n",
-      "|2019|     341713.0|       3|        3|       2083|     2|\n",
-      "|2019|     407891.5|       3|        3|       2413|     2|\n",
-      "+----+-------------+--------+---------+-----------+------+\n",
-      "only showing top 20 rows\n",
+      "+----------+-------------+\n",
+      "|year_built|average_price|\n",
+      "+----------+-------------+\n",
+      "|      2010|    285010.22|\n",
+      "|      2011|    276553.81|\n",
+      "|      2012|    307539.97|\n",
+      "|      2013|    303676.79|\n",
+      "|      2014|    298264.72|\n",
+      "|      2015|    297609.97|\n",
+      "|      2016|     293965.1|\n",
+      "|      2017|    280317.58|\n",
+      "+----------+-------------+\n",
       "\n"
      ]
     }
@@ -226,17 +223,17 @@
     "# and are greater than or equal to 2,000 square feet rounded to two decimal places?\n",
     "\n",
     "spark.sql(\"\"\"\n",
-    "        select year(date) as year, round(avg(price), 2) as average_price, bedrooms, bathrooms, sqft_living, floors\n",
+    "        select date_built as year_built, round(avg(price), 2) as average_price \n",
     "        from home_sales\n",
     "        where bedrooms==3 and bathrooms==3 and sqft_living>=2000 and floors==2\n",
-    "        group by year, bedrooms, bathrooms, sqft_living, floors\n",
-    "        order by year\n",
+    "        group by year_built\n",
+    "        order by year_built\n",
     "        \"\"\").show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -252,30 +249,30 @@
       "+----+-------------+\n",
       "|view|average_price|\n",
       "+----+-------------+\n",
-      "|  33|    393973.32|\n",
-      "|  37|    394964.36|\n",
-      "|   6|    395655.38|\n",
-      "|  42|     396964.5|\n",
-      "|   2|    397389.25|\n",
-      "|  29|    397771.65|\n",
-      "|  30|     397862.0|\n",
-      "|  38|    398418.37|\n",
-      "|  47|     398447.5|\n",
-      "|  17|    398474.49|\n",
-      "|  14|    398570.03|\n",
-      "|   8|    398592.71|\n",
-      "|   3|     398867.6|\n",
-      "|  13|    398917.98|\n",
-      "|  19|    398953.17|\n",
-      "|  39|    399234.22|\n",
-      "|  18|    399332.91|\n",
-      "|  32|    399367.72|\n",
-      "|  20|    399522.81|\n",
-      "|  27|    399537.66|\n",
+      "|  91|   1137372.73|\n",
+      "|  97|   1129040.15|\n",
+      "|  84|   1117233.13|\n",
+      "|  75|   1114042.94|\n",
+      "|  89|   1107839.15|\n",
+      "|  78|   1080649.37|\n",
+      "|  77|   1076205.56|\n",
+      "|  87|    1072285.2|\n",
+      "|  86|   1070444.25|\n",
+      "|  82|    1063498.0|\n",
+      "|  90|   1062654.16|\n",
+      "|  99|   1061201.42|\n",
+      "|  76|   1058802.78|\n",
+      "|  85|   1056336.74|\n",
+      "|  95|    1054325.6|\n",
+      "|  98|   1053739.33|\n",
+      "|  81|   1053472.79|\n",
+      "|  83|   1033965.93|\n",
+      "|  94|    1033536.2|\n",
+      "|  88|   1031719.35|\n",
       "+----+-------------+\n",
       "only showing top 20 rows\n",
       "\n",
-      "--- 1.0781161785125732 seconds ---\n"
+      "--- 2.7902708053588867 seconds ---\n"
      ]
     }
    ],
@@ -287,10 +284,10 @@
     "\n",
     "spark.sql(\"\"\"\n",
     "        SELECT view, round(avg(price), 2) as average_price\n",
-    "        FROM home_sales\n",
-    "        WHERE price >=350000\n",
+    "        FROM p_home_sales\n",
     "        GROUP BY view\n",
-    "        ORDER BY average_price\n",
+    "        HAVING average_price >=350000\n",
+    "        ORDER BY average_price DESC\n",
     "        \"\"\").show()\n",
     "\n",
     "\n",
@@ -353,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -369,30 +366,30 @@
       "+----+-------------+\n",
       "|view|average_price|\n",
       "+----+-------------+\n",
-      "|  33|    393973.32|\n",
-      "|  37|    394964.36|\n",
-      "|   6|    395655.38|\n",
-      "|  42|     396964.5|\n",
-      "|   2|    397389.25|\n",
-      "|  29|    397771.65|\n",
-      "|  30|     397862.0|\n",
-      "|  38|    398418.37|\n",
-      "|  47|     398447.5|\n",
-      "|  17|    398474.49|\n",
-      "|  14|    398570.03|\n",
-      "|   8|    398592.71|\n",
-      "|   3|     398867.6|\n",
-      "|  13|    398917.98|\n",
-      "|  19|    398953.17|\n",
-      "|  39|    399234.22|\n",
-      "|  18|    399332.91|\n",
-      "|  32|    399367.72|\n",
-      "|  20|    399522.81|\n",
-      "|  27|    399537.66|\n",
+      "|  91|   1137372.73|\n",
+      "|  97|   1129040.15|\n",
+      "|  84|   1117233.13|\n",
+      "|  75|   1114042.94|\n",
+      "|  89|   1107839.15|\n",
+      "|  78|   1080649.37|\n",
+      "|  77|   1076205.56|\n",
+      "|  87|    1072285.2|\n",
+      "|  86|   1070444.25|\n",
+      "|  82|    1063498.0|\n",
+      "|  90|   1062654.16|\n",
+      "|  99|   1061201.42|\n",
+      "|  76|   1058802.78|\n",
+      "|  85|   1056336.74|\n",
+      "|  95|    1054325.6|\n",
+      "|  98|   1053739.33|\n",
+      "|  81|   1053472.79|\n",
+      "|  83|   1033965.93|\n",
+      "|  94|    1033536.2|\n",
+      "|  88|   1031719.35|\n",
       "+----+-------------+\n",
       "only showing top 20 rows\n",
       "\n",
-      "--- 1.2293694019317627 seconds ---\n"
+      "--- 3.0611929893493652 seconds ---\n"
      ]
     }
    ],
@@ -404,10 +401,10 @@
     "\n",
     "spark.sql(\"\"\"\n",
     "        SELECT view, round(avg(price), 2) as average_price\n",
-    "        FROM home_sales\n",
-    "        WHERE price >=350000\n",
+    "        FROM p_home_sales\n",
     "        GROUP BY view\n",
-    "        ORDER BY average_price\n",
+    "        HAVING average_price >=350000\n",
+    "        ORDER BY average_price DESC\n",
     "        \"\"\").show()\n",
     "\n",
     "\n",
@@ -416,40 +413,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "id": "Qm12WN9isHBR"
    },
    "outputs": [],
    "source": [
-    "# 10. Partition by the \"date_built\" field on the formatted parquet home sales data \n"
+    "# 10. Partition by the \"date_built\" field on the formatted parquet home sales data \n",
+    "home_df.write.partitionBy('date_built').mode('overwrite').parquet('home_partitioned')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "id": "AZ7BgY61sRqY"
    },
    "outputs": [],
    "source": [
-    "# 11. Read the formatted parquet data.\n"
+    "# 11. Read the formatted parquet data.\n",
+    "part_home_df = spark.read.parquet('home_partitioned')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "id": "J6MJkHfvVcvh"
    },
    "outputs": [],
    "source": [
-    "# 12. Create a temporary table for the parquet data.\n"
+    "# 12. Create a temporary table for the parquet data.\n",
+    "part_home_df.createOrReplaceTempView('p_home_sales')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -457,7 +457,41 @@
     "id": "G_Vhb52rU1Sn",
     "outputId": "a0b8d0c4-55ed-4c6c-bfd8-4c8c5334838e"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+-------------+\n",
+      "|view|average_price|\n",
+      "+----+-------------+\n",
+      "|  91|   1137372.73|\n",
+      "|  97|   1129040.15|\n",
+      "|  84|   1117233.13|\n",
+      "|  75|   1114042.94|\n",
+      "|  89|   1107839.15|\n",
+      "|  78|   1080649.37|\n",
+      "|  77|   1076205.56|\n",
+      "|  87|    1072285.2|\n",
+      "|  86|   1070444.25|\n",
+      "|  82|    1063498.0|\n",
+      "|  90|   1062654.16|\n",
+      "|  99|   1061201.42|\n",
+      "|  76|   1058802.78|\n",
+      "|  85|   1056336.74|\n",
+      "|  95|    1054325.6|\n",
+      "|  98|   1053739.33|\n",
+      "|  81|   1053472.79|\n",
+      "|  83|   1033965.93|\n",
+      "|  94|    1033536.2|\n",
+      "|  88|   1031719.35|\n",
+      "+----+-------------+\n",
+      "only showing top 20 rows\n",
+      "\n",
+      "--- 3.811836004257202 seconds ---\n"
+     ]
+    }
+   ],
    "source": [
     "# 13. Run the query that filters out the view ratings with average price of greater than or eqaul to $350,000 \n",
     "# with the parquet DataFrame. Round your average to two decimal places. \n",
@@ -465,14 +499,20 @@
     "\n",
     "start_time = time.time()\n",
     "\n",
-    "\n",
+    "spark.sql(\"\"\"\n",
+    "        SELECT view, round(avg(price), 2) as average_price\n",
+    "        FROM p_home_sales\n",
+    "        GROUP BY view\n",
+    "        HAVING average_price >=350000\n",
+    "        ORDER BY average_price DESC\n",
+    "        \"\"\").show()\n",
     "\n",
     "print(\"--- %s seconds ---\" % (time.time() - start_time))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -480,14 +520,26 @@
     "id": "hjjYzQGjtbq8",
     "outputId": "830549fd-bb41-451b-9183-5ebf6e3e470b"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 14. Uncache the home_sales temporary table.\n"
+    "# 14. Uncache the home_sales temporary table.\n",
+    "spark.sql('uncache table home_sales')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -495,10 +547,22 @@
     "id": "Sy9NBvO7tlmm",
     "outputId": "be73e0e3-5e85-4794-aad9-025fb6fa84a7"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 15. Check if the home_sales is no longer cached\n",
-    "\n"
+    "\n",
+    "spark.catalog.isCached('home_sales')"
    ]
   },
   {
