--- a/Home_Sales.ipynb
+++ b/Home_Sales.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -272,7 +272,7 @@
       "+----+-------------+\n",
       "only showing top 20 rows\n",
       "\n",
-      "--- 2.7902708053588867 seconds ---\n"
+      "--- 1.2350456714630127 seconds ---\n"
      ]
     }
    ],
@@ -284,7 +284,7 @@
     "\n",
     "spark.sql(\"\"\"\n",
     "        SELECT view, round(avg(price), 2) as average_price\n",
-    "        FROM p_home_sales\n",
+    "        FROM home_sales\n",
     "        GROUP BY view\n",
     "        HAVING average_price >=350000\n",
     "        ORDER BY average_price DESC\n",
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -311,7 +311,7 @@
        "DataFrame[]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -338,7 +338,7 @@
        "True"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -389,7 +389,7 @@
       "+----+-------------+\n",
       "only showing top 20 rows\n",
       "\n",
-      "--- 3.0611929893493652 seconds ---\n"
+      "--- 0.8368432521820068 seconds ---\n"
      ]
     }
    ],
@@ -401,7 +401,7 @@
     "\n",
     "spark.sql(\"\"\"\n",
     "        SELECT view, round(avg(price), 2) as average_price\n",
-    "        FROM p_home_sales\n",
+    "        FROM home_sales\n",
     "        GROUP BY view\n",
     "        HAVING average_price >=350000\n",
     "        ORDER BY average_price DESC\n",
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "id": "Qm12WN9isHBR"
    },
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "id": "AZ7BgY61sRqY"
    },
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "id": "J6MJkHfvVcvh"
    },
@@ -488,7 +488,7 @@
       "+----+-------------+\n",
       "only showing top 20 rows\n",
       "\n",
-      "--- 3.811836004257202 seconds ---\n"
+      "--- 2.0418272018432617 seconds ---\n"
      ]
     }
    ],
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -527,7 +527,7 @@
        "DataFrame[]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -554,7 +554,7 @@
        "False"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
